.ralph/evidence/story-rust-system-harness/35-node-startup-unified-entrypoint/targeted-ha-matrix.seq8.log
   Compiling pgtuskmaster_rust v0.1.0 (/home/joshazimullah.linux/work_mounts/patroni_rewrite/pgtuskmaster_rust)
error[E0382]: borrow of moved value: `log_file`
   --> src/ha/e2e_multi_node.rs:435:27
    |
373 |             let log_file = namespace.child_dir(format!("logs/{node_id}/postgres.log"));
    |                 -------- move occurs because `log_file` has type `PathBuf`, which does not implement the `Copy` trait
...
389 |                     log_file,
    |                     -------- value moved here
...
435 |                 log_file: log_file.clone(),
    |                           ^^^^^^^^ value borrowed here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
389 |                     log_file: log_file.clone(),
    |                             ++++++++++++++++++

For more information about this error, try `rustc --explain E0382`.
error: could not compile `pgtuskmaster_rust` (lib test) due to 1 previous error
